--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4,6 +4,8 @@ body{
     font-family: 'Courier New', Courier, monospace;
     margin: 0;
     padding: 0;
+
+    box-sizing: border-box;
 }
 
 a:link,
@@ -22,24 +24,25 @@ header .header{
     display: flex;
     flex-direction: row;
     text-decoration: none;
+    justify-content: space-between;
+    align-items: center;
+
+    box-sizing: border-box;
 
     height: 80px;
     width: 100%;
+    padding: 0 20px;
 }
 
 header .header h1{
     color: inherit;
     font-size: 3em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    flex-grow: 0;
-
-    padding: 0 20px;
+    width: 150px;
     margin: 0;
-    height: 100%;
-    position: absolute;
+}
+
+header .header div.logo{
+    width: 150px;
 }
 
 
@@ -48,22 +51,35 @@ header .header nav{
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-left: 10px;
-    flex-grow: 1;
+    gap: 40px;
+
+    height: 100%;
 }
 
-header .header nav ul{
+
+header .header nav a{
+    font-size: 1.5em;
+    text-wrap: nowrap;
+    height: 100%;
+
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
-header .header nav ul li{
-    list-style: none;
-    margin: 10px 40px;
-    padding: 0;
-    font-size: 1.5em;
+header .header nav a:hover{
+    filter: brightness(0.8);
+}
+
+header .header nav a.active::after{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 5px;
+    background-color: yellow;
 }
 
 .noselect{
