--- a/static/css/writeups.css
+++ b/static/css/writeups.css
@@ -1,11 +1,36 @@
-.wrapper{
+.writeups {
+    width: 80%;
+    word-wrap: break-word;
+    margin: 50px 10% ;
+    overflow: hidden;
+}
+
+.writeups-list {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 80%;
+    gap: 20px;
+    
+    width: 100%;
     height: auto;
-    margin: 50px 10%;
+}
+
+.writeups-list hr.divider{
+    width: 100%;
+    height: 1px;
+    background-color: #5c5b48;
+    border: none;
+}
+
+.writeup-link{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    
+    width: 100%;
+    height: auto;
 }
 
 .writeup-info{
@@ -20,7 +45,7 @@
     height: auto;
 }
 
-.writeup-info span{
+.writeup-link span{
     height: 25px;
     display: flex;
     justify-content: baseline;
@@ -28,7 +53,7 @@
 
 }
 
-.writeup-info span img{
+.writeup-link span img{
     max-height: 20px;
     max-width: 20px;
     aspect-ratio: 1/1;
@@ -38,28 +63,16 @@
 }
 
 
-.writeup {
-    width: 100%;
-    word-wrap: break-word;
-    overflow: hidden;
-}
-
-.writeup a:link{
+.writeup-link a:link{
     text-decoration: underline;
     /* color: inherit; */
     color: #fffb80;
 }
 
-.writeup a:hover{
+.writeup-link a:hover{
     filter: brightness(0.8);
 }
 
-.writeup a:visited{
-    color: #fffb80;
+.writeup-link a:visited{
+    color: #adaa42;
 }
-
-.writeup h1{
-    margin-top: 50px;
-}
-
-
