--- a/views/team.ejs
+++ b/views/team.ejs
@@ -15,7 +15,7 @@
         {
             name: "Nathan",
             nickname: "Natjkint",
-            specialty: "Forensics",
+            specialty: "OSint",
             pic: "natjkint.png"
         },
         {
