--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,9 @@
+:root {
+    --ligth-main-color: #ffe712;
+    --dark-main-color: #090d12;
+    --dark-secondary-color: #1a1b1c;
+}
+
 body{
     background-color: #090d12;
     color: #fff;
@@ -19,8 +25,8 @@ a:active {
 
 header .header{
     position: relative;
-    background-color: #1a1b1c;
-    color: yellow;
+    background-color: var(--dark-secondary-color);
+    color: var(--ligth-main-color);
     display: flex;
     flex-direction: row;
     text-decoration: none;
@@ -79,8 +85,33 @@ header .header nav a.active::after{
     left: 0;
     width: 100%;
     height: 5px;
-    background-color: yellow;
+    background-color: var(--ligth-main-color);
 }
+
+
+header .breadcrumbs{
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+
+    width: 100%;
+    height: 50px;
+    padding: 0 50px;
+
+    box-sizing: border-box;
+
+    gap: 20px;
+
+    background-color: var(--ligth-main-color);
+    color: var(--dark-main-color);
+}
+
+header .breadcrumbs a:hover{
+    text-decoration: underline;
+    text-decoration-thickness: 1px;
+}
+
 
 .noselect{
     -webkit-touch-callout: none; /* iOS Safari */
