--- a/static/css/writeup.css
+++ b/static/css/writeup.css
@@ -73,4 +73,19 @@
     margin-top: 50px;
 }
 
+.writeup pre{
+    border: 1px solid #5c5b48;
+    border-radius: 5px;
+    overflow: hidden;
+}
 
+.writeup table, .writeup th, .writeup td{
+    border: 2px solid #5c5b48;
+    border-collapse: collapse;
+    padding: 2px 5px 0 5px;
+}
+
+.writeup table thead tr{
+    background-color: #5c5b48;
+    color: #fffb80;
+}
