--- a/views/file_preview.ejs
+++ b/views/file_preview.ejs
@@ -31,5 +31,37 @@
         <% } %>
 
     </main>
+
+    <script>
+        // For summaries and anchors
+        titles = document.querySelectorAll(".wrapper h1, .wrapper h2, .wrapper h3, .wrapper h4, .wrapper h5, .wrapper h6");
+        titles.forEach(title => {
+            let id = title.innerText
+                .replace(/\s+/g, '-')
+                .replace(/[^a-zA-Z0-9-]/g, '')
+                .toLowerCase();
+            if(document.getElementById(id)){
+                let i;
+                for(i = 1; document.getElementById(`${id}-${i}`); i++);
+                id = `${id}-${i}`;
+            }
+            title.id = id;
+        });
+        
+        imgs = document.querySelectorAll(".wrapper img");
+        imgs.forEach(img => {
+            if(img.src.startsWith(window.location.origin + "/writeups/"))
+                img.addEventListener("dblclick", function() {
+                    window.location.href = "?preview=" + img.getAttribute("src");
+                });
+        });
+
+        links = document.querySelectorAll(".wrapper a[href]");
+        links.forEach((link)=>{
+            if(link.href.startsWith(window.location.origin + "/writeups/") && !link.href.includes("#")) {
+                link.href = "?preview=" + link.getAttribute("href");
+            }
+        })
+    </script>
 </body>
 </html>
