--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,16 @@
 
     <%- include("partials/header.ejs") %>
 
-    <p>Bienvenue sur notre site de writeups !</p>
+    <div class="hero">
+        <h2>Welcome to 51ng3’s CTF Playground 🕹️💻</h2>
+        <p>We’re <strong>51ng3</strong>, a bunch of engineering students who decided to start doing CTFs — Capture The Flag challenges that test everything from logic to technical knowledges</p>
+    
+        <p>These writeups are our digital notebook: the good ideas, the weird bugs, the “wait... it works?!” moments, and all the glorious facepalms in between. Most of these CTFs were done as part of our cybersecurity training in engineering school — but let’s be honest, we also do it because it’s <strong>just way too fun</strong>.</p>
+    
+        <p>Whether you're here to learn, train, or just vibe with the process, we hope our notes help you crack your own flags or at least enjoy the ride.</p>
+    
+        <p>So grab a coffee, fire up a VM, and let’s break stuff (ethically, of course) 🔐⚙️</p>
+    </div>
+    
 </body>
 </html>
