Trailing slashes in URIs + Icon + titles

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,8 @@
 <%
     const pages = [
         { name: 'Home',     path: '/'      },
-        { name: 'Writeups', path: '/writeups' },
-        { name: 'The team', path: '/team'  }
+        { name: 'Writeups', path: '/writeups/' },
+        { name: 'The team', path: '/team/'  }
     ];
 
     const currentPageIndex = pages.findIndex(page => page.path === locals.path || page.path + '/' === locals.path);
