--- a/views/writeups.ejs
+++ b/views/writeups.ejs
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Writeups</title>
+    <title>51ng3 - Writeups</title>
+    <link rel="shortcut icon" href="/img/icons/icon.png">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/writeups.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
@@ -19,7 +20,7 @@
 
                 <div class="writeup-link">
                     <h2>
-                        <a href="/writeups/<%= writeup.path %>"><%= writeup.name %></a>
+                        <a href="/writeups/<%= writeup.path %>/"><%= writeup.name %></a>
                     </h2>
 
                     <div class="writeup-info">
