--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>51ng3 - Home</title>
+    <link rel="shortcut icon" href="/img/icons/icon.png">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
