--- a/views/team.ejs
+++ b/views/team.ejs
@@ -39,7 +39,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Team</title>
+    <title>51ng3 - The Team</title>
+    <link rel="shortcut icon" href="/img/icons/icon.png">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/team.css">
 </head>
