--- a/views/writeup.ejs
+++ b/views/writeup.ejs
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= locals.title || "writeup" %></title>
+    <title>51ng3 - <%= writeup.name|| "writeup" %></title>
+    <link rel="shortcut icon" href="/img/icons/icon.png">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/writeup.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
