--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -12,6 +12,7 @@ body{
     padding: 0;
 
     box-sizing: border-box;
+    min-height: 100vh;
 }
 
 a:link,
@@ -135,6 +136,12 @@ header .breadcrumbs a:hover{
     text-decoration-thickness: 1px;
 }
 
+.content{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .noselect{
     -webkit-touch-callout: none; /* iOS Safari */
