--- a/views/404.ejs
+++ b/views/404.ejs
@@ -13,7 +13,7 @@
 
     <div class="content">
         <h1>404</h1>
-        <h2>This ressources does not exist</h2>
+        <h2>Page not found</h2>
     </div>
     
     
